# macroquad_shorelark

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: lib.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs
libs/simulation/: Cargo.toml
libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  chaser.rs  eye.rs  food.rs  hervor.rs  lib.rs  plant.rs  world.rs
libs/simulation/src/individual/: chaser_individual.rs  hervor_individual.rs  mod.rs
